--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <div id="foo">hello word</div>
     <div id="lobby"></div>
     <div id="bank"></div>
-    <!-- <script src="/assets/big.js"></script> -->
-    <script src="vendor/require.js"></script>
-    <script src="build/main.js"></script>
+    <!--<script src="vendor/require.js"></script>-->
+    <script src="assets/js/BIG.js"></script>
+    <!--<script src="build/main.js"></script>-->
     <script>
     require(['BIG'], function(BIG) {
         window.BIG = BIG;
